# analogy_publication

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yaml  lint.yaml  release.yaml  test.yaml
src/analogy/: main.py
src/analogy/core/: analyser.py  confidence_interval.py  incidence_prevalence.py  preprocessor.py
src/analogy/data/: __init__.py  sample.csv
src/analogy/utils/: file_utils.py  formating.py
tests/: test_confidence_interval.py  test_generate_datasets.py  test_utilities.py
