[tool.poetry]
name = "analogy"
version = "0.0.1"
description = "A python CLI application for analogy."
repository = "https://github.com/aditya02acharya/analogy_publication"
authors = ["aditya02acharya <aditya02acharya@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typer = "^0.4.1"
pandas = "^2.0.3"
polars = "^0.18.15"
scipy = "^1.11.2"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]
lint = ["black", "isort", "darglint", "pylint", "mypy", "pre-commit"]
docs = ["mkdocs", "mkdocstrings", "mkdocstrings-python", "mkdocs-material"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pylint = "^2.13.8"
mypy = "^0.961"
pre-commit = "^2.19.0"
mkdocs = "^1.3.0"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
mkdocs-material = "^8.3.9"

[tool.poetry.scripts]
analogy = "analogy.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

[tool.black]
# https://github.com/psf/black
target-version = ["py310"]
line-length = 100
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 100

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
python_version = 3.9
# warn_return_any = true
disallow_untyped_defs = true
warn_unused_configs = true
ignore_missing_imports = true
